<?php
namespace DesignPatterns\Creational\FactoryMethod;

abstract class AbstractFactory
{
    abstract public function createProduct();
}