<?php
namespace DesignPatterns\Creational\FactoryMethod;

class AbstractProduct
{

}