<?php
namespace DesignPatterns\Creational\FactoryMethod;

class ProductA extends AbstractProduct
{

}