<?php
namespace DesignPatterns\Creational\FactoryMethod;

class ProductB extends AbstractProduct
{

}